<resources>
    <string name="app_name">UM-Flint Application</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="main_menu">Main Menu</string>
    <string name="title_activity_department_information">Department Information</string>
    <string name="title_activity_maps_page">Campus Maps</string>
    <string name="department_information">Department Information</string>
    <string name="academic_calendar">Academic Calendar</string>
    <string name="departments">Departments</string>
    <string name="maps">Maps</string>
    <string name="scheduling">Scheduling</string>
    <string name="reserve_room">Reserve Room</string>
    <string name="schedule_advisor">Schedule Advisor</string>
    <string name="group_meetings">Group Meetings</string>
    <string name="schedule_student">Schedule Student Meeting</string>
    <string name="messaging">Messaging</string>
    <string name="announcements">Announcements</string>
    <string name="discord">Discord</string>
    <string name="title_activity_alerts">Alerts</string>
    <string name="title_news">News</string>
    <string name="home">Home</string>
    <string name="app_logo_description">App Logo</string>
    <string name="umflint_logo_description">UM-Flint Logo</string>
    <string name="title_activity_academic_calendar">AcademicCalendar</string>
    <string name="student_messaging">Student Messaging</string>
    <string name="title_student_messaging">Student Messaging</string>
    <string name="title_schedule_advisor">Schedule Advisor</string>
    <string name="title_schedule_group_meeting">Schedule Group Meeting</string>
    <string name="send_announcements">Send Announcement</string>
    <string name="signInHeaderText">Hello %1$s %2$s!</string>
    <string name="signInBodyText">Welcome to the University of Michigan-Flint App, you have access to messaging, scheduling, and role notifications now! Click here to logout.</string>
    <string name="signInHeaderDefault">SIGN IN WITH UM-GOOGLE</string>
    <string name="signInBodyDefault">UM-Flint App is better with an account, customize and personalize it so it works for you!</string>
    <string name="building_hours">Building Hours</string>
</resources>