<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view"
    android:background="#FFFFFF">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_resources"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/department_information" >
            <!--Submenu items-->
            <menu>
                <item
                    android:id="@+id/nav_resources_academic_calendar"
                    android:title="@string/academic_calendar" />
                <item
                    android:id="@+id/nav_resources_departments"
                    android:title="@string/departments" />
                <item
                    android:id="@+id/nav_resources_maps"
                    android:title="@string/maps" />
            </menu>
        </item>
        <item
            android:id="@+id/nav_scheduling"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/scheduling">
            <menu>
                <item
                    android:id="@+id/nav_scheduling_reserve_room"
                    android:title="@string/reserve_room" />
                <item
                    android:id="@+id/nav_scheduling_schedule_advisor"
                    android:title="@string/schedule_advisor" />
                <item
                    android:id="@+id/nav_scheduling_group_meetings"
                    android:title="@string/group_meetings" />
            </menu>
        </item>
        <item
            android:id="@+id/nav_messaging"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/messaging" >
            <menu>
                <item
                    android:id="@+id/nav_messaging_announcements"
                    android:title="@string/announcements" />
                <item
                    android:id="@+id/nav_messaging_discord"
                    android:title="@string/discord" />
            </menu>
        </item>
    </group>
</menu>